"MODULE.bazel BlazeRod part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven_blazerod",
    artifacts = [
        "org.lwjgl:lwjgl:3.3.3",
        "org.lwjgl:lwjgl-assimp:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-windows:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-windows-x86:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-windows-arm64:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-linux-arm32:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-linux-arm64:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-linux:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-macos:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-macos-arm64:3.3.3",
        "org.javassist:javassist:3.30.2-GA",
    ],
    repositories = [
        "https://repo1.maven.org/maven2/",
    ],
    lock_file = "//blazerod:maven_install.json",
    fetch_sources = True,
)
use_repo(maven, "maven_blazerod")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "mocha",
    url = "https://repo.maven.apache.org/maven2/team/unnamed/mocha/3.0.1/mocha-3.0.1-sources.jar",
    sha256 = "325319bfb53aa83bdb8367b03fced9b32fc285e12ec1b9d60134bc16d8170119",
    build_file = "@//third_party/mocha:BUILD.mocha.bazel",
    patch_strip = 1,
    patches = [
        "@//third_party/mocha/patches:entity_object_property.patch",
        "@//third_party/mocha/patches:mutable_entity.patch",
    ],
)
