"MODULE.bazel Combine part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Combine
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.2.20",
        "org.jetbrains.compose.runtime:runtime:1.7.1",
        "org.jetbrains.compose.runtime:runtime-saveable:1.7.1",
        "org.mini2Dx:universal-tween-engine:6.3.3",
    ],
)
