"MODULE.bazel Fabric part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

fabric_versions = {
    "1.20.6": {
        "api": "0.100.8+1.20.6",
        "loader": "0.15.6",
        "placeholder_api": "2.4.0-pre.1+1.20.5",
        "modmenu": "10.0.0",
        "mixin": "0.12.5+mixin.0.8.5",
        "mixin_extras": "0.3.2",
    },
    "1.21": {
        "api": "0.102.0+1.21",
        "loader": "0.15.11",
        "placeholder_api": "2.4.0+1.21",
        "modmenu": "11.0.3",
        "mixin": "0.13.3+mixin.0.8.5",
        "mixin_extras": "0.3.5",
    },
    "1.21.1": {
        "api": "0.110.0+1.21.1",
        "loader": "0.15.11",
        "placeholder_api": "2.4.0+1.21",
        "modmenu": "11.0.3",
        "mixin": "0.13.3+mixin.0.8.5",
        "mixin_extras": "0.3.5",
    },
    "1.21.3": {
        "api": "0.112.1+1.21.3",
        "loader": "0.16.8",
        "placeholder_api": "2.5.0+1.21.2",
        "modmenu": "12.0.0",
        "mixin": "0.15.4+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.4": {
        "api": "0.113.0+1.21.4",
        "loader": "0.16.9",
        "placeholder_api": "2.5.0+1.21.2",
        "modmenu": "13.0.0-beta.1",
        "mixin": "0.15.4+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.5": {
        "api": "0.119.5+1.21.5",
        "loader": "0.16.10",
        "placeholder_api": "2.6.0+1.21.5",
        "modmenu": "14.0.0-rc.2",
        "mixin": "0.15.4+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.6": {
        "api": "0.126.1+1.21.6",
        "loader": "0.16.14",
        "placeholder_api": "2.7.0+1.21.6",
        "modmenu": "15.0.0-beta.3",
        "mixin": "0.15.5+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.7": {
        "api": "0.128.2+1.21.7",
        "loader": "0.16.14",
        "placeholder_api": "2.7.0+1.21.6",
        "modmenu": "15.0.0-beta.3",
        "mixin": "0.15.5+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.8": {
        "api": "0.129.0+1.21.8",
        "loader": "0.16.13",
        "placeholder_api": "2.7.1+1.21.6",
        "modmenu": "15.0.0-beta.3",
        "mixin": "0.15.4+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.9": {
        "api": "0.134.0+1.21.9",
        "loader": "0.17.0",
        "placeholder_api": "2.8.0-rc.1+1.21.9",
        "modmenu": "16.0.0-rc.1",
        "mixin": "0.16.3+mixin.0.8.7",
        "mixin_extras": "0.5.0",
    },
    "1.21.10": {
        "api": "0.134.1+1.21.10",
        "loader": "0.17.0",
        "placeholder_api": "2.8.0+1.21.9",
        "modmenu": "16.0.0-rc.1",
        "mixin": "0.16.3+mixin.0.8.7",
        "mixin_extras": "0.5.0",
    },
}

[
    (
        maven.artifact(
            name = "maven_fabric_%s" % version.replace(".", "_"),
            artifact = "fabric-api",
            exclusions = ["net.fabricmc.fabric-api:fabric-api-deprecated"],
            group = "net.fabricmc.fabric-api",
            version = entry["api"],
        ),
        maven.install(
            name = "maven_fabric_%s" % version.replace(".", "_"),
            artifacts = [
                "net.fabricmc:intermediary:%s:v2" % version,
                "net.fabricmc.fabric-api:fabric-api:%s" % entry["api"],
                "net.fabricmc:fabric-loader:%s" % entry["loader"],
                "com.terraformersmc:modmenu:%s" % entry["modmenu"],
                "net.fabricmc:sponge-mixin:%s" % entry["mixin"],
                "io.github.llamalad7:mixinextras-fabric:%s" % entry["mixin_extras"],
                "eu.pb4:placeholder-api:%s" % entry["placeholder_api"],
            ],
            repositories = [
                "https://maven.fabricmc.net/",
                "https://repo1.maven.org/maven2/",
                "https://maven.terraformersmc.com/",
                "https://maven.nucleoid.xyz/",
            ],
            lock_file = "//game/%s:maven_install_fabric.json" % version,
            fetch_sources = True,
        ),
        use_repo(maven, "maven_fabric_%s" % version.replace(".", "_")),
    )
    for version, entry in fabric_versions.items()
]

maven.install(
    artifacts = [
        "net.fabricmc:fabric-language-kotlin:1.13.5+kotlin.2.2.10",
    ],
)
