"MODULE.bazel Iris part"

modrinth = use_extension("//repo:modrinth.bzl", "modrinth")

iris_versions = {
    "fabric_1_21": "zsoi0dso",
    "neoforge_1_21": "oXIoDcGE",
    "fabric_1_21_6": "l77DAK6U",
    "neoforge_1_21_6": "xA5cxBvz",
    "fabric_1_21_9": "r1MZ1Bpv",
    "neoforge_1_21_9": "QwsZwykw",
}

[
    (
        modrinth.version(
            name = "iris_" + version_name,
            version_id = version_id,
        ),
        use_repo(modrinth, "iris_" + version_name),
    )
    for version_name, version_id in iris_versions.items()
]
