"MODULE.bazel mdbook part"

mdbook_deps = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
mdbook_deps.spec(
    artifact = "bin",
    package = "mdbook",
    version = "=0.5.1",
)
mdbook_deps.annotation(
    crate = "mdbook",
    gen_all_binaries = True,
)
mdbook_deps.from_specs(
    name = "mdbook_deps",
    host_tools = "@rust_host_tools_nightly",
)
use_repo(mdbook_deps, "mdbook_deps")

register_toolchains("//toolchain:mdbook_toolchain")
