"MODULE.bazel Sodium part"

modrinth = use_extension("//repo:modrinth.bzl", "modrinth")

sodium_versions = {
    "fabric_1_21": "u1OEbNKx",
    "neoforge_1_21": "Pb3OXVqC",
    "fabric_1_21_6": "ND4ROcMQ",
    "neoforge_1_21_6": "ihzX2Dvy",
    "fabric_1_21_9": "sFfidWgd",
    "neoforge_1_21_9": "PdQpfqPZ",
}

[
    (
        modrinth.version(
            name = "sodium_" + version_name,
            version_id = version_id,
        ),
        use_repo(modrinth, "sodium_" + version_name),
    )
    for version_name, version_id in sodium_versions.items()
]
