load("@rules_rust//rust:toolchain.bzl", "rust_toolchain")

rust_toolchain(
    name = "rust_windows_x86_64_impl",
    binary_ext = ".exe",
    default_edition = "2024",
    dylib_ext = ".dll",
    exec_triple = "x86_64-unknown-linux-gnu",
    rust_doc = "@rust_x86_64-unknown-linux-gnu//:rustdoc",
    rust_std = "@rust_std_windows_x86_64_gnu//:rust_std",
    rustc = "@rust_x86_64-unknown-linux-gnu//:rustc",
    rustc_lib = "@rust_x86_64-unknown-linux-gnu//:rustc_lib",
    staticlib_ext = ".a",
    stdlib_linkflags = [
        "-ldl",
        "-lpthread",
    ],
    target_triple = "x86_64-pc-windows-gnullvm",
)

toolchain(
    name = "rust_windows_x86_64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    toolchain = ":rust_windows_x86_64_impl",
    toolchain_type = "@rules_rust//rust:toolchain_type",
)
