load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "expect_client",
    srcs = glob(
        include = [
            "kotlin/**/*.kt",
            "java/**/*.java",
        ],
        allow_empty = True,
    ),
    expect = True,
    visibility = ["//armorstand:__subpackages__"],
    deps = [
        "//armorstand/game:remapped_client_access_widened_named",
    ],
)
