load("@rules_java//java:defs.bzl", "java_library")
load("//rule:apply_access_widener.bzl", "apply_access_widener")
load("//rule:extract_access_widener.bzl", "extract_access_widener")
load("//rule/neoforge:convert_access_widener.bzl", "convert_access_widener")

extract_access_widener(
    name = "access_widener_dep_named",
    inputs = ["//armorstand/fabric_client:remapped_deps"],
)

apply_access_widener(
    name = "remapped_client_access_widened_named",
    srcs = [
        "armorstand.accesswidener",
        ":access_widener_dep_named",
    ],
    input = "//game/1.21.8:game_client_named",
    neverlink = True,
    visibility = ["//armorstand:__subpackages__"],
)

convert_access_widener(
    name = "access_transformer_file",
    src = "armorstand.accesswidener",
    output_name = "access_transformer.cfg",
)

java_library(
    name = "access_transformer",
    resource_strip_prefix = "armorstand/game",
    resources = [":access_transformer_file"],
    visibility = ["//armorstand:__subpackages__"],
)

java_library(
    name = "access_widener",
    resource_strip_prefix = "armorstand/game",
    resources = ["armorstand.accesswidener"],
    visibility = ["//armorstand:__subpackages__"],
)
