load("//rule:remap_jar.bzl", "remap_jar")

alias(
    name = "render_fabric_unmapped",
    actual = "//blazerod/render/fabric:fabric_unmapped",
    visibility = ["//visibility:public"],
)

alias(
    name = "render_fabric_unmapped_merged",
    actual = "//blazerod/render/fabric:fabric_unmapped_merged",
    visibility = ["//visibility:public"],
)

remap_jar(
    name = "render_fabric_merged",
    classpath = ["//game/1.21.8:game_client_named"],
    from_namespace = "named",
    inputs = [":render_fabric_unmapped_merged"],
    mapping = "//game/1.21.8:game_merged_mapping",
    mixin = True,
    to_namespace = "intermediary",
    visibility = ["//visibility:public"],
)

alias(
    name = "render_main",
    actual = "//blazerod/render/main",
    visibility = ["//visibility:public"],
)

alias(
    name = "render_neoforge",
    actual = "//blazerod/render/neoforge",
    visibility = ["//visibility:public"],
)

alias(
    name = "render_neoforge_merged",
    actual = "//blazerod/render/neoforge:neoforge_merged",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = [
        "//blazerod/render/main/layout/test",
        "//blazerod/render/main/runtime/test",
    ],
)
