load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "widget",
    srcs = glob(["*.kt"]),
    merge_deps = [
        "//combine/core/data",
        "//combine/core/input/interaction",
        "//combine/core/layout",
        "//combine/core/modifier",
        "//combine/core/modifier/drawing",
        "//combine/core/modifier/focus",
        "//combine/core/modifier/input",
        "//combine/core/modifier/key",
        "//combine/core/modifier/placement",
        "//combine/core/modifier/pointer",
        "//combine/core/paint",
        "//combine/core/sound",
        "//combine/core/widget",
        "//combine/core/widget/layout",
        "//combine/style",
        "//combine/theme/base",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:compose",
    ],
)
