load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "collector",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//fastmerger/classdeps",
        "//fastmerger/symbolmap",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:org_jetbrains_annotations",
    ],
)
