load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//1.20.6:client",
    client_mappings = "@minecraft//1.20.6:client_mappings",
    intermediary = "@maven_fabric_1_20_6//:net_fabricmc_intermediary_v2",
    server = "@minecraft//1.20.6:server",
    version = "1.20.6",
    visibility = ["//visibility:public"],
)
