load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//1.21.6:client",
    client_mappings = "@minecraft//1.21.6:client_mappings",
    intermediary = "@maven_fabric_1_21_6//:net_fabricmc_intermediary_v2",
    server = "@minecraft//1.21.6:server",
    version = "1.21.6",
    visibility = ["//visibility:public"],
)
