load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//1.21:client",
    client_mappings = "@minecraft//1.21:client_mappings",
    intermediary = "@maven_fabric_1_21//:net_fabricmc_intermediary_v2",
    server = "@minecraft//1.21:server",
    version = "1.21",
    visibility = ["//visibility:public"],
)
